--- a/Backend/public/browser/index.html
+++ b/Backend/public/browser/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/logo.svg">
-  <style>*,*:before,*:after{box-sizing:border-box}html,body{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:none;text-size-adjust:none}body{line-height:1}app-root{--background-color:#4d9aff;--link-color:#0062e2;--outline-focus:#0857be}</style><link rel="stylesheet" href="styles-IXMJ5FFB.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-IXMJ5FFB.css"></noscript></head>
+  <style>*,*:before,*:after{box-sizing:border-box}html,body{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:none;text-size-adjust:none}html{overflow:hidden}body{line-height:1}app-root{--background-color:#4d9aff;--link-color:#0062e2;--outline-focus:#0857be;--button-blue-bg:#3100e7;--button-blue-bg-hover:#270996;--button-text-white:whitesmoke;--button-green-bg:rgb(29, 151, 54);--button-green-bg-hover:rgb(30, 177, 59)}</style><link rel="stylesheet" href="styles-SI5POF5B.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-SI5POF5B.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-STCSBFDB.js" type="module"></script></body>
+  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-6LULUQAL.js" type="module"></script></body>
 </html>
