--- a/Backend/public/browser/index.html
+++ b/Backend/public/browser/index.html
@@ -10,5 +10,5 @@
   <style>*,*:before,*:after{box-sizing:border-box}html,body{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-webkit-text-size-adjust:none;text-size-adjust:none}html{overflow:hidden}body{line-height:1}app-root{--background-color:#4d9aff;--link-color:#0062e2;--outline-focus:#0857be;--button-blue-bg:#3100e7;--button-blue-bg-hover:#270996;--button-text-white:whitesmoke;--button-green-bg:rgb(29, 151, 54);--button-green-bg-hover:rgb(30, 177, 59)}</style><link rel="stylesheet" href="styles-SI5POF5B.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-SI5POF5B.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-6LULUQAL.js" type="module"></script></body>
+  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-OSQEYYF6.js" type="module"></script></body>
 </html>
